Fix horizontal issue with horizontal scrolling

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,8 @@
     --second-bg-color: #323946;
     --text-color: #fff;
     --main-color: #0ef;
+    --main-color: #4bffa5;
+
 }
 
 html {
@@ -24,6 +26,7 @@ html {
 body {
     background-color: var(--bg-color);
     color: var(--text-color);
+    overflow-x: hidden;
 }
 
 section {
@@ -80,7 +83,7 @@ section {
 }
 
 .home-img img {
-    width: 35vw;
+    width: 39vw;
     border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
 }
 
@@ -104,7 +107,8 @@ span {
 }
 
 .home-content {
-    font-size: 1.6rem;
+    line-height: 1.5;
+    font-size: 1.8rem;
 }
 
 .social-media a {
@@ -155,7 +159,7 @@ span {
     background: var(--second-bg-color);
 }
 
-.about-img {
+.about-img img {
     width: 35vw;
 }
 
@@ -190,16 +194,18 @@ span {
     align-items: center;
     flex-wrap: wrap;
     gap: 2rem;
+    padding: 0 16rem 8rem;
 }
 
 .services-container .services-box {
-    flex: 1 1 30rem;
+    /* flex: 1 1 calc(25% - 2rem); */
     background: var(--second-bg-color);
     padding: 3rem 2rem 4rem;
-    border-radius: 2rem;
+    border-radius: 1rem;
     text-align: center;
     border: .2rem solid var(--bg-color);
     transition: .5s ease;
+    width: 17rem;
 }
 
 .services-container .services-box:hover {
@@ -212,13 +218,34 @@ span {
     color: var(--main-color);
 }
 
-.services-box h3 {
-    font-size: 2.6rem;
+.service-img {
+    width: 8rem;
 }
+
+.html-css {
+    font-size: 2rem;
+}
+
+.rest-framework {
+    background-color: var(--text-color);
+}
+
+.stack-group {
+    display: flex;
+}
+
+.css {
+    height: 8.7rem;
+}
+
+/* .services-box h3 {
+    font-size: 2.6rem;
+} */
 
 .services-box p {
     font-size: 1.6rem;
     margin: 1rem 0 3rem;
+    font-weight: bold;
 }
 
 /* Portfolio styling */
@@ -452,6 +479,7 @@ span {
         margin-top: 4rem;
     }
 
+
     .about {
         flex-direction:  column-reverse;
     }
@@ -459,6 +487,10 @@ span {
     .about img {
         width: 70vw;
         margin-top: 4rem;
+    }
+
+    .services-container {
+        padding: 0  0 4rem 0;
     }
 
     .services h2 {
@@ -495,7 +527,7 @@ span {
         width: 90vw;
     }
 
-    .about-img {
+    .about-img img {
         width: 90vw;
     }
 
@@ -508,3 +540,4 @@ span {
         margin-top: 2rem;
     }
 }
+
